# tesla-fan-control

./: README.md  main.py  pyproject.toml  tesla-fan-control.service  tesla_fan_control.py
tests/: test_tesla_fan_control.py
