[project]
name = "teslafancontrol"
version = "0.1.0"
description = "Python script and systemd unit to control pwm fan mounted on Nvidia Tesla card"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = [ "tests"]
addopts = "-v"
