[project]
name = "teslafancontrol"
version = "0.1.0"
description = "Temperature based fan speed control for PWM fan mounted on Nvidia Tesla compute card"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = [ "tests"]
addopts = "-v"
